# OceanGL

./: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  ocean.cpp  ocean.h
imgui/: CMakeLists.txt
include/: camera.h  error.h  program.h  vao.h  vao.hxx  vbo.h
shaders/: fragment_shader.glsl  ocean_fragment_shader.glsl  ocean_tess_eval.glsl  skybox_shader_frag.glsl  skybox_shader_tess_eval.glsl  skybox_shader_vert.glsl  tess_control.glsl  tess_eval.glsl
src/: CMakeLists.txt  program.cpp  vao.cpp  vbo.cpp
